Fixing styles for header on mobile

--- a/src/styles/components/_about.scss
+++ b/src/styles/components/_about.scss
@@ -18,11 +18,11 @@
 		justify-content: space-between;
 		padding: 20px 0;
 
-		@media screen and (min-width: 360px) {
+		@media screen and (min-width: 480px) {
 			justify-content: flex-start;
 		}
 
-		@media screen and (min-width: 768px) {
+		@media screen and (min-width: 680px) {
 			justify-content: space-between;
 		}
 
